--- a/ChapterFive.tex
+++ b/ChapterFive.tex
@@ -1,6 +1,9 @@
 \chapter{Simulations and Analysis of the 3PWFS}\label{CH4}
 
-To assess the performance of the 3PWFS compared to the 4PWFS, a simulation was developed using the Object Oriented Matlab Adaptive Optics toolbox (OOMAO) \citep{OOMAO}. The OOMAO toolbox is an end-to-end adaptive optics model that can simulate different combinations of guide stars, turbulent atmospheres, wavefront sensors, deformable mirrors, and science cameras. Light is propagated using Fraunhofer diffraction. The master OOMAO toolbox simulates a 4PWFS using Slopes Maps. This chapter details the work that was done to extend OOMAO's utilities to include the 3PWFS and the Raw Intensity signal processing method. We then discuss an experiment performed in OOMAO to study the performance of the 3PWFS compared to the 4PWFS for different magnitude guide stars. 
+To assess the performance of the 3PWFS compared to the 4PWFS, a simulation was developed using the Object Oriented Matlab Adaptive Optics toolbox (OOMAO) \citep{OOMAO}. The OOMAO toolbox is an end-to-end adaptive optics model that can simulate different combinations of guide stars, turbulent atmospheres, wavefront sensors, deformable mirrors, and science cameras. Light is propagated using Fraunhofer diffraction. The master OOMAO toolbox simulates a 4PWFS using Slopes Maps. This chapter details the work that was done to extend OOMAO's utilities to include the 3PWFS and the Raw Intensity signal processing method. We then discuss an experiment performed in OOMAO to study the performance of the 3PWFS compared to the 4PWFS for different magnitude guide stars.
+
+In Section \ref{WFSerror} the SNR for the 3PWFS and 4PWFS was calculated for varying guide star magnitudes. At low light levels when the read noise term dominates the 3PWFS has a gain of $\sqrt{4/3}$ in SNR over the 4PWFS. Other benefits of using a 3PWFS is the simplified manufacturing process. Grinding and polishing a high quality three-sided pyramid optic is faster and cheaper than a four-sided pyramid optic of similar quality. A concern for the 3PWFS is that the wavefront is sampled with three points instead of four. The 3PWFS potential has a larger null space than the 4PWFS, meaning less modes are sensed and the accuracy of the wavefront sensing is reduced. In this and the following chapter we characterize the performance of the 3PWFS in both simulation and on a testbench to explore the potential benefits and disadvantages of the 3PWFS.
+
 
 \section{The Object Oriented Matlab Adaptive Optics toolbox}
 
@@ -207,6 +210,6 @@ In Figure \ref{fig:overall}, no significant difference in performance was found 
 \subsection{Discussion}
 
 
-\cite{codona2018comparative} used the AOsim3 wave optics package to compare end to end performance of a 3PWFS to a 4PWFS with no modulation. In this simulation the Raw Intensity  signal handling method was used. In open loop with no noise the study showed that the 4PWFS out performed the 3PWFS by 0.005 Strehl. Our simulation results agree with the findings by Codona et al. We found in our simulations with 0.5 read noise that the performance of the wavefront sensors are within 0.01 Strehl. Our results differ from Codona et al. when including read noise. They found that for a detector with $3e^-$ read noise, that there was a gap performance improvement by 1 guide star magnitude in favor of the 3PWFS. Codona et. al. considered other factors including system latency, and were sensing in the J-band. Our simulations are in r-band and were optimized only for loop gain. Using a detector with $12 e^-$ read noise we found that the performance of the wavefront sensors are once again comparable, and we found only $~0.02$ gain in Strehl from the 3PWFS at 10th magnitude. The scope of our simulations is limited but still agree that the 3PWFS is less sensitive to read noise, however the amount of improvement gained is still under question. Both the 3PWFS and 4PWFS discussed in this paper are refractive, and image all pupils onto the same detector \citep{sanchez2020design}. Moving towards a reflective PWFS that would image each pupil onto its own detector could have a more substantial benefit. Each detector would be smaller, resulting in faster readout speeds with less added read noise. Low read noise detectors are expensive, so using a reflective PWFS would increase system cost and complexity.
+\cite{codona2018comparative} used the AOsim3 wave optics package to compare end to end performance of a 3PWFS to a 4PWFS with no modulation. In this simulation the Raw Intensity  signal handling method was used. In open loop with no noise the study showed that the 4PWFS out performed the 3PWFS by 0.005 Strehl. Our simulation results agree with the findings by Codona et al. We found in our simulations with 0.5 read noise that the performance of the wavefront sensors are within 0.01 Strehl. Our results differ from Codona et al. when including read noise. They found that for a detector with $3e^-$ read noise, that there was a gap performance improvement by 1 guide star magnitude in favor of the 3PWFS. Codona et. al. considered other factors including system latency, and were sensing in the visible. Our simulations are in r-band and were optimized only for loop gain. Using a detector with $12 e^-$ read noise we found that the performance of the wavefront sensors are once again comparable, and we found only $~0.02$ gain in Strehl from the 3PWFS at 10th magnitude. The scope of our simulations is limited but still agree that the 3PWFS is less sensitive to read noise, however the amount of improvement gained is still under question. Both the 3PWFS and 4PWFS discussed in this paper are refractive, and image all pupils onto the same detector \citep{sanchez2020design}. Moving towards a reflective PWFS that would image each pupil onto its own detector could have a more substantial benefit. Each detector would be smaller, resulting in faster readout speeds with less added read noise. Low read noise detectors are expensive, so using a reflective PWFS would increase system cost and complexity.
 
 \newpage
