--- a/ChapterFour.tex
+++ b/ChapterFour.tex
@@ -3,13 +3,14 @@
 
 A key component of an ExAO system is the wavefront sensor, which measures aberrations from atmospheric turbulence. A common choice of WFS in current and next generation instruments is the pyramid wavefront sensor (PWFS). The PWFS is a highly sensitive wavefront sensor that is able to measure the wavefront at high speeds. The sensitivity and linear range of the PWFS can be tuned by dynamic modulation, making the PWFS robust to different seeing conditions. 
 
+
 \section{The Pyramid Wavefront Sensor}\label{PWFSintro}
-The optical design of the PWFS consists of four components: a focusing optic, the glass pyramid, and a relay lens to image the pupils on the detector \citep{ragazzoni2002pyramid}. Figure \ref{fig:pyramid} shows a schematic of the operation of a PWFS \citep{pyramidfig}.  The starlight is first brought to a focus on the tip of a glass pyramid that splits the focal plane into parts. The apex angle of the pyramid imparts a tilt to separate each of the sections. The result is copies of the telescope pupil that are separated spatially on a detector. The number of pixels across each pupil determines the number of modes the instrument is sensitive to. Current on-sky adaptive optics systems that have a PWFS use a four-sided PWFS. The Magellan Adaptive Optics System (MagAO) \citep{close2018status}, the Large Binocular Telescope Interferometer (LBTI) \citep{esposito2011adaptive}, and MagAO-X use an achromatic double four-sided pyramid. The SCExAO instrument uses two crossed roof prisms as its pyramid optic. The basic PWFS is highly sensitive but suffers from low dynamic range. A modulator is used to move the beam around the pyramid tip to increase the linear range of the PWFS. Modulation is achieved by oscillating a piezo-actuator driven mirror to drive the PSF on the pyramid tip into a circular pattern with a radius quoted in units of $\lambda/D$, where $\lambda$ is wavelength, and $D$ is the diameter of the entrance pupil. This increases the effective spot size on the pyramid tip which increases the sensor's linearity at the cost of sensitivity \citep{guyon2005}.  
+The optical design of the PWFS consists of four components: a focusing optic, the glass pyramid, and a relay lens to image the pupils on the detector \citep{ragazzoni2002pyramid}. Figure \ref{fig:pyramid} shows a schematic of the operation of a PWFS \citep{shatokhina2014fast}.  The starlight is first brought to a focus on the tip of a glass pyramid that splits the focal plane into parts. The apex angle of the pyramid imparts a tilt to separate each of the sections. The result is copies of the telescope pupil that are separated spatially on a detector. The number of pixels across each pupil determines the number of modes the instrument is sensitive to. Current on-sky adaptive optics systems that have a PWFS use a four-sided PWFS. The Magellan Adaptive Optics System (MagAO) \citep{close2018status}, the Large Binocular Telescope Interferometer (LBTI) \citep{esposito2011adaptive}, and MagAO-X use an achromatic double four-sided pyramid. The SCExAO instrument uses two crossed roof prisms as its pyramid optic. The basic PWFS is highly sensitive but suffers from low dynamic range. A modulator is used to move the beam around the pyramid tip to increase the linear range of the PWFS. Modulation is achieved by oscillating a piezo-actuator driven mirror to drive the PSF on the pyramid tip into a circular pattern with a radius quoted in units of $\lambda/D$, where $\lambda$ is wavelength, and $D$ is the diameter of the entrance pupil. This increases the effective spot size on the pyramid tip which increases the sensor's linearity at the cost of sensitivity \citep{guyon2005}.  
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.75\textwidth]{Chapter Materials/Chapter Two Materials/pyramid.png}
-    \caption{Optical design of a PWFS. Light from the telescope is focused onto a glass pyramid tip where it is split and then the pupil plane is reimaged onto a detector. The result is copies of the telescope pupil that contain intensity fluctuations that are related to the wavefront phase.}
+    \includegraphics[width=0.75\textwidth]{Chapter Materials/Chapter Three Materials/pyramidDiagram.jpg}
+    \caption{Optical design of a PWFS. Light from the telescope is focused onto a glass pyramid tip where it is split and then the pupil plane is reimaged onto a detector. The result is copies of the telescope pupil that contain intensity fluctuations that are related to the wavefront phase \citep{shatokhina2014fast}.}
     \label{fig:pyramid}
 \end{figure}
 
@@ -22,11 +23,11 @@ The intensity measured in the PWFS must be processed to infer the wavefront phas
     S_y=\frac{I_1-I_2-I_3+I_4}{I_1+I_2+I_3+I_4} \nonumber
 \end{eqnarray}
 
-where $S_x, S_y$ are the local wavefront slopes in the x and y direction, and $I_1...I_4$ are the intensity values of the pixel corresponding to the same location in each pupil. The intensity patterns in the pyramid pupils contain both the X and Y spatial information of wavefront gradient from the diffraction off of the pyramid edges. The Raw Intensity (RI) signal processing method uses the pyramid signal as-is. The benefit of the Raw Intensity method is that it is relatively unaffected by alignment errors. The major challenge in using this technique is obtaining a good flat wavefront reference image. The signals in the pyramid pupils are then extracted into a single column vector of intensity values.
+where $S_x, S_y$ are the local wavefront slopes in the x and y direction, and $I_1...I_4$ are the intensity values of the pixel corresponding to the same location in each pupil. The intensity patterns in the pyramid pupils contain both the X and Y spatial information of wavefront gradient from the diffraction off of the pyramid edges. The Raw Intensity (RI) signal processing method uses the pyramid signal as-is. The same processing steps are performed: masking, dark subtraction, and gain correction. The resulting signal is unraveled into a single vector of intensity signals. The benefit of the Raw Intensity method is that it is relatively unaffected by alignment errors. The major challenge in using this technique is obtaining a good flat wavefront reference image. The signals in the pyramid pupils are then extracted into a single column vector of intensity values.
 
-All current PWFSs on telescopes use a 4PWFS. ExAO systems need high sampling of the PWFS pupils to optimize performance, and as a result require larger detectors. Detector size, speed, and noise all impose limits on wavefront sensor designs and limit the performance of an GSMT-ExAO system. We are interested in exploring the 3PWFS as an alternative PWFS for an ELT-ExAO wavefront sensor to overcome these limitations. The 3PWFS only has three copies of the pupil and therefore uses fewer detector pixels than the 4PWFS and should be less sensitive to read noise. We assess the performance of the 3PWFS compared to the 4PWFS in simulation to determine if the 3PWFS does outperform the 4PWFS when using high read noise detectors.
+All current PWFS on telescopes use a 4PWFS. ExAO systems need high sampling of the PWFS pupils to optimize performance, and as a result require larger detectors. Detector size, speed, and noise all impose limits on wavefront sensor designs and limit the performance of an GSMT-ExAO system. We are interested in exploring the 3PWFS as an alternative PWFS for an ELT-ExAO wavefront sensor to overcome these limitations. The 3PWFS only has three copies of the pupil and therefore uses fewer detector pixels than the 4PWFS and should be less sensitive to read noise. We assess the performance of the 3PWFS compared to the 4PWFS in simulation to determine if the 3PWFS does outperform the 4PWFS when using high read noise detectors.
 
-To assess the performance of the 3PWFS compared to the 4PWFS, a simulation was developed using the Object Oriented Matlab Adaptive Optics toolkit (OOMAO) \citep{OOMAO}. The OOMAO toolkit is an end-to-end adaptive optics model that can simulate different combinations of guide stars, turbulent atmospheres, wavefront sensors, deformable mirrors, and science cameras. Light is propagated using Fraunhofer diffraction. The PWFS is simulated using a single tip/tilt phase mask that is segmented into N parts. Figure \ref{fig:oomaoFigs}.A and \ref{fig:oomaoFigs}.C show the masks for the 3PWFS and 4PWFS. The masks are scaled and rotated according to a user input for rotation and pyramid apex angle that controls the separation of the pyramid pupils. After scaling, the mask is converted into a phase mask that is applied at the focal plane to simulate a pyramid tip. Figure \ref{fig:oomaoFigs}.C and \ref{fig:oomaoFigs}.D show the resulting pyramid pupils on the simulated wavefront sensor camera, using a flat wavefront and 5 $\lambda/D$ modulation. The master OOMAO toolbox simulates a 4PWFS using Slopes Maps. We extended the PWFS class in OOMAO to include a 3PWFS, taking care that the amplitude of the tip/tilt phase in the 3PWFS phase screen generation matched that of 4PWFS. We included our derivation of the Slopes Maps equation for the 3PWFS (derived in Section~\ref{SlopesDerivation} below), and added the Raw Intensity method for both the 4PWFS and the 3PWFS. For both the Slopes Maps and Raw Intensity method the signal was normalized by the mean value across all valid pixels on the wavefront sensor detector, instead of normalizing pixel by pixel. 
+To assess the performance of the 3PWFS compared to the 4PWFS, a simulation was developed using the Object Oriented Matlab Adaptive Optics toolkit (OOMAO) \citep{OOMAO}. The OOMAO toolkit is an end-to-end adaptive optics model that can simulate different combinations of guide stars, turbulent atmospheres, wavefront sensors, deformable mirrors, and science cameras. Light is propagated using Fraunhofer diffraction. The PWFS is simulated using a single tip/tilt phase mask that is segmented into N parts. Figure \ref{fig:oomaoFigs}.A and \ref{fig:oomaoFigs}.C show the masks for the 3PWFS and 4PWFS. The masks are scaled and rotated according to a user input for rotation and pyramid apex angle that controls the separation of the pyramid pupils. After scaling, the mask is converted into a phase mask that is applied at the focal plane to simulate a pyramid tip. Figure \ref{fig:oomaoFigs}.C and \ref{fig:oomaoFigs}.D show the resulting pyramid pupils on the simulated wavefront sensor camera, using a flat wavefront and 5 $\lambda/D$ modulation. The master OOMAO toolbox simulates a 4PWFS using Slopes Maps. We extended the PWFS class in OOMAO to include a 3PWFS, taking care that the amplitude of the tip/tilt phase in the 3PWFS phase screen generation matched that of 4PWFS. We included our derivation of the Slopes Maps equation for the 3PWFS (derived in Section~\ref{SlopesDerivation} below), and added the Raw Intensity method for both the 4PWFS and the 3PWFS. For both the Slopes Maps and Raw Intensity method the signal was normalized by the mean value across all valid pixels on the wavefront sensor detector, instead of normalizing cell by cell. 
 
 \begin{figure}
     \centering
@@ -387,7 +388,17 @@ The $S_x$ slopes maps in this orientation depends only on the intensities from t
  
 \subsection{Testbed Verification}
  
-To test the validity of the Slopes Maps equation for the 3PWFS, and the Raw Intensity method we implemented these signal processing methods into a real closed adaptive optics system using the LOOPS testbed at the Laboratoire d'Astrophysique de Marseille. The LOOPS testbed at LAM used a spatial light modulator (SLM) to create the pyramid tip. A full description of the LOOPS testbed can be found in  \cite{janin2019adaptive}. On the testbed a closed loop correction was achieved for both a 3PWFS and 4PWFS with reconstructors calculated from both the Raw Intensity and Slopes Maps signal handling techniques. A reflective phase plate was used in the system to simulate turbulence, and an ALPAO deformable mirror was used to apply the correction. In all cases a stable closed loop was obtained. Figure \ref{fig:LOOOPS} shows example images from the LOOPS test-bed of (A) the pyramid signal of the 3PWFS under turbulence in closed loop, (B) the pyramid signal of the 4PWFS under turbulence in closed loop, (C) the LOOPS PSF with no turbulence, and (D) the LOOPS PSF in closed loop with the 3PWFS using the Slopes Map technique. 
+To test the validity of the Slopes Maps equation for the 3PWFS, and the Raw Intensity method we implemented these signal processing methods into a real closed adaptive optics system using the LOOPS testbed at the Laboratoire d'Astrophysique de Marseille.  The layout of the LOOPs testbed is detailed in Figure REF. The source for the LOOPs is a HeNe laser attenuated by a continuously variable gradient ND filter wheel. There are multiple paths through the loops testbed created by beamsplitters. Different branches can be blocked or passed to create modes where the testbed only uses flat mirrors to record a reference PSF, and to illuminate the deformable mirror and phase screen. The phase screen is a reflective and simulates a $D/r_0$ of about 28. The wind speed of the turbulence can be changed by speeding up or slowing down a stepper motor that rotates the phase screen. An ALPAO 69 actuator deformable mirror is used to for the closed loop correction. A phase screen applied on a spatial light modulator (SLM) is used to create the pyramid tip. The wavefront sensing camera is an OCAM$^2$K used in single pixel mode. Each pyramid pupil is 80 pixels in diameter. A full description of the LOOPS testbed can be found in  \cite{janin2019adaptive}. 
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{Chapter Materials/Chapter Four Materials/LOOPSdiagram.png}
+    \caption{Schematic of the LOOPS testbed. The pupil planes are marked in red. Light starts at the source marked S and propagates to the right to either the phase screen or a flat reference mirror. Next the light can be passed to either the deformable mirror or another flat mirror. For this experiment only the SLM was used to create the pyramid optics. The wavefront sensing camera (P-WFS$_2$) is an OCAM$^2$K camera with pupils 80 pixels in diameter \citep{janin2019adaptive}.}
+    \label{fig:my_label}
+\end{figure}
+
+
+On the testbed a closed loop correction was achieved for both a 3PWFS and 4PWFS with reconstructors calculated from both the Raw Intensity and Slopes Maps signal handling techniques. The loop was run at 250Hz, with a modulation radius of 5 $\lambda/D$. In all cases a stable closed loop was obtained. Figure \ref{fig:LOOOPS} shows example images from the LOOPS test-bed of (A) the pyramid signal of the 3PWFS under turbulence in closed loop, (B) the pyramid signal of the 4PWFS under turbulence in closed loop, (C) the LOOPS PSF with no turbulence, and (D) the LOOPS PSF in closed loop with the 3PWFS using the Slopes Map technique. An experiment was performed to measure and compare Strehl between the wavefront sensor. The results of the experiment were inconclusive due to the lack of confidence in the consistency and optimization of measurements taken. The ALPAO deformable mirror was found to have significant drift and hysteresis resulting in the need to resharpen the PSF on the pyramid tip frequently. In addition due to the surface quality or the performance of the SLM, the pyramid pupils were not high quality. In the 4PWFS the edges of two of the pyramid pupils were blurry. One of the pupils on the 3PWFS suffered significantly from this affect. The effect on the quality of the wavefront reconstruction by each of the PWFS was not quantified. 
 
 \begin{figure}
     \centering
