--- a/ChapterOne.tex
+++ b/ChapterOne.tex
@@ -38,7 +38,7 @@ Two of the driving forces in exoplanet research are the detection and characteri
 \begin{figure}
     \centering
     \includegraphics{Chapter Materials/Introduction Materials/Introduction Figures/HCexoplanet.png}
-    \caption{Image of exoplanet HD 106906 b taken with the Magellan Adaptive Optics (MagAO) instrument. \citep{bailey2013hd}}
+    \caption{Image of exoplanet HD 106906 b taken with the Magellan Adaptive Optics (MagAO) instrument, \citep{bailey2013hd}.}
     \label{fig:exoplanets}
 \end{figure}
 
@@ -46,13 +46,13 @@ Two of the driving forces in exoplanet research are the detection and characteri
 
 \subsection{High Contrast Imaging}
 
-High contrast imaging is a special case of direct imaging that is used to image faint companions next to bright stars. Targets include circumstellar disks \citep{rodigas2014morphology}, active galactic nuclei \citep{imanishi2020subaru}, and exoplanets \citep{bowler2016imaging}.Typically, exoplanets have flux contrasts of 10$^{-4}$ to 10$^{-10}$ with respect to their host stars. These high contrast ratios present challenges in directly imaging faint objects. Overcoming this contrast problem requires a two-fold solution. The starlight needs to be suppressed by a coronagraph, and the resulting high contrast region, called the dark hole, needs to be maintained over the course of the observation through extreme adaptive optics (ExAO) and wavefront sensing and control (WS$\&$C) techniques. ExAO systems operate by propagating light from a guide star to a wavefront sensor, which measures the phase error of the starlight wavefront. A computer then sends commands to shape a deformable mirror (DM) to correct for the phase error, forming a closed feedback loop that compensates for most of the atmospheric distortion. The corrected beam is then passed to a coronagraph which blocks the light from the on-axis star and allows us to detect faint off-axis sources. Figure \ref{fig:BetaCen} is a high contrast image of the binary star system $\beta$ Centauri using a vector apodizing phase plate coronagraph (vAPP) \citep{snik2012vector}, on the Magellan Adaptive Optics System (MagAO) \citep{close2018status}. There are many types of coronagraphs currently used in high contrast imaging; most work by blocking out light using masks and stops \citep{soummer2004apodized}, or using interferometric techniques to destructively interfere light at the focal plane \citep{foo2005optical}. Uncorrected phase errors and non-common path errors from the ExAO system result in speckles in the focal plane that reduce coronagraph contrast.
+High contrast imaging is a special case of direct imaging that is used to image faint companions next to bright stars. Targets include circumstellar disks \citep{rodigas2014morphology}, active galactic nuclei \citep{imanishi2020subaru}, and exoplanets \citep{bowler2016imaging}.Typically, exoplanets have flux contrasts of 10$^{-4}$ to 10$^{-10}$ with respect to their host stars. These high contrast ratios present challenges in directly imaging faint objects. Overcoming this contrast problem requires a two-fold solution. The starlight needs to be suppressed by a coronagraph, and the resulting high contrast region, called the dark hole, needs to be maintained throughout the observation through extreme adaptive optics (ExAO) and wavefront sensing and control (WS$\&$C) techniques. ExAO systems operate by propagating light from a guide star to a wavefront sensor, which measures the phase error of the starlight wavefront. A computer then sends commands to shape a deformable mirror (DM) to correct for the phase error, forming a closed feedback loop that compensates for most of the atmospheric distortion. The corrected beam is then passed to a coronagraph which blocks the light from the on-axis star and allows us to detect faint off-axis sources. Figure \ref{fig:BetaCen} is a high contrast image of the binary star system $\beta$ Centauri using a vector apodizing phase plate coronagraph (vAPP) \citep{snik2012vector}, on the Magellan Adaptive Optics System (MagAO) \citep{close2018status}. There are many types of coronagraphs currently used in high contrast imaging; most work by blocking out light using masks and stops \citep{soummer2004apodized}, or using interferometric techniques to destructively interfere light at the focal plane \citep{foo2005optical}. Uncorrected phase errors and non-common path errors from the ExAO system result in speckles in the focal plane that reduce coronagraph contrast.
  
 
 \begin{figure}
     \centering
     \includegraphics{Chapter Materials/Introduction Materials/BetaCen.png}
-    \caption{High contrast image of star system $\beta$ Centauri using a vAPP coronagraph on MagAO. The vAPP creates two copies of the corongraph PSF in a single image. }
+    \caption{High contrast image of star system $\beta$ Centauri using a vAPP coronagraph on MagAO, \citep{close2018status}. The vAPP creates two copies of the corongraph PSF in a single image. }
     \label{fig:BetaCen}
 \end{figure}
 
@@ -64,7 +64,7 @@ Within the next decade, the world will see a new generation of Giant Segmented M
 
  The GSMTs all plan to use the pyramid wavefront sensor (PWFS) in ExAO instruments. The PWFS performs a Foucault test in two dimensions. Light from the telescope is focused onto a glass pyramid tip where it is split and then the pupil plane is re-imaged onto a detector. The result is copies of the telescope pupil that contain intensity fluctuations that are related to the wavefront phase. All current PWFS on telescopes use a four sided pyramid (4PWFS), resulting in four pupil images. The Planetary Systems Imager \citep{fitzgerald2019planetary}, for the TMT will use a non-modulated PWFS in combination with lower order wavefront control to reach and maintain high contrast \citep{guyon2018wavefront}. The Multi-AO Imaging Camera for Deep Observations (MICADO) for the E-ELT is a pathfinder instrument for performing high contrast imaging on GSMTs that uses a PWFS \citep{davies2018micado}. The High Angular Resolution Monolithic Optical and Near-infrared Integral field spectrograph (HARMONI), also for the E-ELT has a PWFS in the single conjugate adaptive optics (SCAO) mode to deliver diffraction limited performance for the E-ELT's core spectroscopic capability \citep{neichel2016adaptive}. The Giant Magellan Extreme Adaptive Optics System (GMagAO-X) is being developed as a first light ExAO instrument for the GMT and will use a PWFS \citep{males2019gmagao}.
 
-This dissertation aims to develop the three-sided pyramid wavefront sensor (3PWFS) as an alternative GSMT-ExAO wavefront sensor. The 3PWFS  uses fewer detector pixels so it is less sensitive to read noise than the 4PWFS. In Chapter \ref{CH2}, we determine the expected signal from a telescope and detail how atmospheric turbulence degrades image quality. Chapter \ref{CH3} describes the pyramid wavefront sensor and a mathematical formalism based on the diffraction theory description of the Foucault knife-edge test that predicts the intensity pattern after the PWFS. Our formalism allows us to calculate the intensity in the pupil images formed by the PWFS in the presence of phase errors corresponding to arbitrary Fourier modes. We use these results to motivate how we process signals from a 3PWFS. We compare the Raw Intensity method which uses the signal in the pupils as is, and derive the Slopes Maps calculation for the 3PWFS which combines the three pupil images of the 3PWFS to obtain the X and Y slopes of the wavefront. We then use the Object Oriented MATLAB Adaptive Optics toolbox (OOMAO) in Chapter \ref{CH4} to simulate an end-to-end model of an adaptive optics system using a PWFS with modulation and compare the performance of the 3PWFS to the 4PWFS. In Chapter \ref{CH5} we describe the design and current status of the MagAO-X 4PWFS. In Chapter \ref{CH6} we present the Comprehensive Adaptive Optics and Coronagraph Test Instrument (CACTI), which was designed with the flexibility to support visiting instruments and to be easily re-configurable to perform multiple experiments. We first describe the design of CACTI, review its operation and calibration procedures, and discuss its current status. We then discuss an experiment performed on CACTI with a visiting three-sided pyramid wavefront sensor (3PWFS) to explore an alternative wavefront sensor architecture for GSMT-ExAO. Both a 3PWFS and 4PWFS were integrated into  CACTI to demonstrate the operation of a 3PWFS and compare it to the 4PWFS. We present results from experiments demonstrating the operation of the 3PWFS, and comparisons to the 4PWFS. Finally, in Chapter \ref{CH7}, we discuss the conclusions we can draw from the outcome of these experiments.
+This dissertation aims to develop the three-sided pyramid wavefront sensor (3PWFS) as an alternative GSMT-ExAO wavefront sensor. The 3PWFS  uses fewer detector pixels so it is less sensitive to read noise than the 4PWFS. In Chapter \ref{CH2}, I determine the expected signal from a telescope and detail how atmospheric turbulence degrades image quality. Chapter \ref{CH3} describes the pyramid wavefront sensor and a mathematical formalism based on the diffraction theory description of the Foucault knife-edge test that predicts the intensity pattern after the PWFS. My formalism allows us to calculate the intensity in the pupil images formed by the PWFS in the presence of phase errors corresponding to arbitrary Fourier modes. I use these results to motivate how we process signals from a 3PWFS. I compare the Raw Intensity method which uses the signal in the pupils as is and derive the Slopes Maps calculation for the 3PWFS which combines the three pupil images of the 3PWFS to obtain the X and Y slopes of the wavefront. I then use the Object Oriented MATLAB Adaptive Optics toolbox (OOMAO) in Chapter \ref{CH4} to simulate an end-to-end model of an adaptive optics system using a PWFS with modulation and compare the performance of the 3PWFS to the 4PWFS. In Chapter \ref{CH5} I describe the design and current status of the MagAO-X 4PWFS. In Chapter \ref{CH6} I present the Comprehensive Adaptive Optics and Coronagraph Test Instrument (CACTI), which was designed with the flexibility to support visiting instruments and to be easily re-configurable to perform multiple experiments. I first describe the design of CACTI, review its operation and calibration procedures, and discuss its current status. I then discuss an experiment performed on CACTI with a visiting three-sided pyramid wavefront sensor (3PWFS) to explore an alternative wavefront sensor architecture for GSMT-ExAO. I present results from an experiment comparing the performance of the 3PWFS to the 4PWFS in varying turbulence strength. Finally, in Chapter \ref{CH7}, I discuss the conclusions we can draw from the outcome of these experiments.
 
 
 
