--- a/ChapterSeven.tex
+++ b/ChapterSeven.tex
@@ -3,14 +3,11 @@
 The next generation of giant telescopes has the potential to image terrestrial exoplanets for the first time. ExAO systems create and maintain regions of high contrast to detect the signal of exoplanets. To reach the level of contrast needed to image terrestrial exoplanets the GSMT-ExAO systems must be optimized. MagAO-X is a pathfinder ExAO system for the Giant Magellan Telescope. In this dissertation, I have presented the design of the MagAO-X PWFS and the current status of the system. The MagAO-X system has a closed-loop on-sky. Future work will optimize MagAO-X for direct imaging of exoplanets.  
 
 
-An ExAO system is optimized for the spatial frequencies of the high contrast region generated from the coronagraph. To optimize a WFS for a wavefront sensor for ExAO the sensitivity of the WFS to spatial frequency must be determined. I have shown that the non-modulated PWFS is insensitive to spatial frequency. In Chapter \ref{CH3} I consolidated the diffraction theory of the knife-edge test by \cite{linfoot1948theory}, \cite{katzoff1971quantitative}, and \cite{wilson1975wavefront} into a single derivation with uniform notation. Expanding upon their results, I linked phase aberrations in the shape of Fourier modes to intensity patterns produced by the knife-edge test. The result found for a phase error in the shape of a Fourier mode is an intensity pattern described by the Hilbert transform of the phase function. I considered an example $\cos(nx)$ phase pattern, and mathematically derived that the resulting intensity pattern is proportional to $-\sin(nx)$, which is functionally the derivative of the phase without the dependence on spatial frequency. This means that phase errors of all spatial frequencies sensed by the PWFS will be well corrected by the AO system. \cite{verinaud2004nature} has shown that modulating the PWFS reduces this sensitivity for spatial frequencies at and below the modulation radius. The Planetary Systems Imager \cite{fitzgerald2019planetary} for the TMT will use a non-modulated PWFS\cite{guyon2018wavefront} in combination with lower-order wavefront control to reach and maintain high contrast. The results of my derivation justify the development of non-modulated PWFS in GSMT-ExAO systems.
+An ExAO system is optimized for the spatial frequencies of the high contrast region generated from the coronagraph. To optimize a WFS for a wavefront sensor for ExAO the sensitivity of the WFS to spatial frequency must be determined. I have shown that the non-modulated PWFS is insensitive to spatial frequency. In Chapter \ref{CH3} I consolidated the diffraction theory of the knife-edge test by \cite{linfoot1948theory}, \cite{katzoff1971quantitative}, and \cite{wilson1975wavefront} into a single derivation with uniform notation. Expanding upon their results, I linked phase aberrations in the shape of Fourier modes to intensity patterns produced by the knife-edge test. The result found for a phase error in the shape of a Fourier mode is an intensity pattern described by the Hilbert transform of the phase function. I considered an example $\cos(nx)$ phase pattern, and mathematically derived that the resulting intensity pattern is proportional to $-\sin(nx)$, which is functionally the derivative of the phase without the dependence on spatial frequency. This means that phase errors of all spatial frequencies sensed by the PWFS will be well corrected by the AO system. \cite{verinaud2004nature} has shown that modulating the PWFS reduces this sensitivity for spatial frequencies at and below the modulation radius. The Planetary Systems Imager \citep{fitzgerald2019planetary} for the TMT will use a non-modulated PWFS \citep{guyon2018wavefront} in combination with lower-order wavefront control to reach and maintain high contrast. The results of my derivation justify the development of non-modulated PWFS in GSMT-ExAO systems.
 
 In this dissertation, I developed a three-sided pyramid wavefront sensor as an alternative GSMT-ExAO wavefront sensor. The current generation of ExAO systems all use four-sided pyramid wavefront sensors. The 3PWFS uses fewer detector pixels than the 4PWFS, and therefore should be less sensitive to read noise. The work in this dissertation has shown that the 3PWFS is a viable wavefront sensor with a performance similar to the 4PWFS. In Chapter \ref{CH4} I performed an end-to-end simulation of an adaptive optics system to compare the performance of the 3PWFS and 4PWFS as well as the Raw Intensity and Slopes Maps signal processing techniques. The scope of my simulations is limited but still agree that the 3PWFS is less sensitive to read noise, however, the amount of improvement gained is still under question. I found that the 3PWFS had a slight gain in performance over the 4PWFS for a high read noise detector in low light conditions. These simulations used a small detector with pupil sampling far fewer than what is needed for GSMT-ExAO. We would expect the slight gain in performance from the 3PWFS to increase with the number of pixels used for wavefront sensing. Future work would explore the performance of the 3PWFS and 4PWFS with larger detectors.
 
-I have presented the design of the Comprehensive Adaptive Optics and Coronagraph Test Instrument (CACTI), a new ExAO testbed designed with the flexibility to support visiting instruments and to be easily re-configurable to perform multiple experiments. I demonstrated the operation of the 3PWFS by closing the AO loop on simulated turbulence on CACTI. The results of our experiment confirmed the gain in performance by decreasing the modulation radius. An experiment was performed on CACTI with a visiting 3PWFS for a comparison test with a 4PWFS in varying strengths of turbulence. Our results agreed with our simulations, that the performance of the 3PWFS is comparable to the 4PWFS. From this experiment, we also saw the gain in performance by decreasing the modulation radius. 
+I have presented the design of the Comprehensive Adaptive Optics and Coronagraph Test Instrument (CACTI), a new ExAO testbed designed with the flexibility to support visiting instruments and to be easily re-configurable to perform multiple experiments. In the current configuration, a visiting 3PWFS was integrated into CACTI for a performance test. Non-common path error was minimized by ensuring each pyramid optic had the same PSF on the tip. I demonstrated the operation of the 3PWFS by closing the AO loop on simulated turbulence on CACTI. The performance of each wavefront sensor was determined by measuring the relative Strehl ratio of the closed-loop PSF with the reference PSF. The Strehl ratio was calculated by a Strehl calculation tool developed for CACTI in Python. A difference in performance for the Raw Intensity method for the 1.6 $\lambda/D$ and 3.25 $\lambda/D$ modulation cases was on average 0.069 Strehl for the 3PWFS, and 0.086 Strehl for the 4PWFS. I cannot definitively conclude that the increase in performance of the 1.6 $\lambda/D$ modulation case was due to the increase in PWFS sensitivity, due to our systematic errors. From our results, we conclude that the 3PWFS has comparable performance to the 4PWFS and that modal loop gains must be tuned as an optimization step to maximize the performance of an ExAO system. 
 
 In simulation and the CACTI testbed, we have compared the performance of the two PWFS in varying levels of light, turbulence, and modulation radius. Future work would continue to explore this parameter space and focus on the optimization of the 3PWFS. On-sky systems change how the AO system is run for different seeing conditions and light levels. In this work, we only optimized for the AO loop gain. Controlling loop speed, modulation radius, and pixel binning are further ways to optimize the AO system and PWFS. These parameters could continue to be explored in simulation or on a testbed. We have demonstrated the operation of the 3PWFS, and successfully closed the AO loop in simulation and two testbeds. As a next step, the 3PWFS is ready to be integrated into a real on-sky AO system for further analysis and optimization.
-
-
-
 
