--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,9 +1,9 @@
 
-Thank you to everyone who has been my friend, mentor, and supporter throughout graduate school. Thank you to my 2020 Snack Club; Joseph Long, Logan Pearce, and Allison Rubenok for being my friends and support group through the coronavirus pandemic and my last year of graduate school. We are ride-or-die friends now. Thank you to Dr. Silvana Ayala, who has been like a sister to me. Thank you for years of laughs in the good times, and comfort in the hard times. You support me even when we are far apart and your friendship means the world to me. Thank you to Kirsty Madonian, my oldest friend. We met in second grade and had no idea the ways we would grow and the paths we would walk on. Thank you for being my friend, and being a listening ear when I needed it.  
+Thank you to everyone who has been my friend, mentor, and supporter throughout graduate school. Thank you to my 2020 Snack Club; Joseph Long, Logan Pearce, and Allison Rubenok for being my friends and support group through the coronavirus pandemic and my last year of graduate school. We are ride-or-die friends now. Thank you to Zuzana Adams for being silly and ridiculous with me and creating space for joy and laughs. Thank you to Dr. Silvana Ayala, who has been like a sister to me. Thank you for years of laughs in the good times, and comfort in the hard times. You support me even when we are far apart and your friendship means the world to me. Thank you to Kirsty Madonian, my oldest friend. We met in second grade and had no idea the ways we would grow and the paths we would walk on. Thank you for being my friend, and being a listening ear when I needed it.  
 
 Thank you to my lab mates, Jhen Lumbres, Kyle Van Gorkom, Maggie Kautz, Alex Hedglen, Alexander Rodack, Dr. Kelsey Miller, Dr. Justin Knight, Joseph Long, and Logan Pearce for years of camaraderie and collaboration. Thank you to my advisor and mentor Dr. Jared Males for your advice, help, and mentorship. For saying 'yes' to my ideas and adventures. Thank you to my co-advisor Dr. Michael Hart, who said yes to an out-of-the-blue phone call from a friend which allowed me to come and study at the University of Arizona. Thank you Dr. Olivier Guyon for being on my committee and offering help and wisdom when I needed it. Thank you to Dr. Leslie Ralph for guiding me through my PhD and helping me become the best version of myself. 
 
-I would like to acknowledge my collaborators in France. Thank you Dr. Benoit Neichel and Dr. Carlos Correia for your mentorship, kindness, and generosity for advising a graduate student who showed up to your lab with nothing but a suitcase. A lot of effort went into planning and organizing my work-study at the Laboratoire d'Astrophysique de Marseille and I want to thank everyone involved who made that opportunity possible. Thank you to my French lab partners, Vincent Chambouleyron, Olivier Fauvarque, Pierre Janin-Potiron for your help and guidance when I was feeling lost and confused in a new country. 
+I would like to acknowledge my collaborators in France. Thank you Dr. Benoit Neichel and Dr. Carlos Correia for your mentorship, kindness, and generosity for advising a graduate student who showed up to your lab with nothing but a suitcase. A lot of effort went into planning and organizing my work-study at the Laboratoire d'Astrophysique de Marseille and I want to thank everyone involved who made that opportunity possible. Thank you to my collaborators at Hart Scientific and the Air Force Research Lab, Dr. Johanan Codona, Dr. Mala Mateen, and Dr. Robert Johnson.
 
 Thank you to my family, for their support and love. Thank you for missing me when I was too busy to come home.
 
