--- a/dedication.tex
+++ b/dedication.tex
@@ -1,3 +1,2 @@
-% I dedicate this dissertation to all the women in science who came before me. Their dedication, hard work, and sacrifice have carved out a  space for women in the field of science. In my undergraduate, I had the privilege to be mentored by remarkable women, Renate Kupke, Rosalie McGurk, Claire Max, and Constance Rockosi.  We aspire to our role models. Because of you all, I could imagine myself pursuing higher education and contributing to my field. You all set the wheels in motion. 
 
-Dedication. Figure something out.
+I dedicate this dissertation to all the friends I have made throughout graduate school. We couldn't predict the challenges we had to overcome these last six years, but we made it through together.
