--- a/report.bib
+++ b/report.bib
@@ -1223,3 +1223,30 @@ archivePrefix = {arXiv},
   year={2020},
   organization={International Society for Optics and Photonics}
 }
+
+@article{tyler1982image,
+  title={Image-position error associated with a quadrant detector},
+  author={Tyler, Glenn A and Fried, David L},
+  journal={JOSA},
+  volume={72},
+  number={6},
+  pages={804--808},
+  year={1982},
+  publisher={Optical Society of America}
+}
+
+inproceedings{ruane2019decadal,
+  title={The Decadal Survey Testbed: Demonstrating Technology for Imaging Earth-like Exoplanets with Future Space Telescopes},
+  author={Ruane, Garreth and Patterson, Keith and Seo, Byoung-Joon and Mejia Prada, C and Crill, Brendan and Siegler, Nick},
+  booktitle={AGU Fall Meeting Abstracts},
+  volume={2019},
+  pages={P51H--3446},
+  year={2019}
+}
+
+@book{guenther2018encyclopedia,
+  title={Encyclopedia of modern optics},
+  author={Guenther, Bob D and Steel, Duncan},
+  year={2018},
+  publisher={Academic Press}
+}
